:sparkles: [REST API] Added support for filtering Groups by domain and documentation
