# rest-api/resources/src/main/resources/openapi/group/group.yaml
@@ -33,6 +33,9 @@ components:
               items:
                 allOf:
                   - $ref: '../openapi.yaml#/components/schemas/kapuaId'
+            domain:
+              description: The target domain of the group
+              type: string
           example:
             type: group
             id: Skm7PvmgOh0
@@ -44,13 +47,19 @@ components:
             optlock: 1
             name: group-1
             description: An Access Group
+            domain: device
     groupCreator:
       allOf:
         - $ref: '../openapi.yaml#/components/schemas/kapuaNamedEntityCreator'
         - type: object
+          properties:
+            domain:
+              description: The target domain of the group
+              type: string
           example:
             name: group-1
             description: An Access Group
+            domain: device
     groupListResult:
       allOf:
         - $ref: '../openapi.yaml#/components/schemas/kapuaListResult'
@@ -75,3 +84,4 @@ components:
                 optlock: 1
                 name: group-1
                 description: An Access Group
+                domain: device
